remove Mojular: * use latest common * require js scripts the standard way * add stylesheets for old ie versions * align to govuk visual styles, * use govuk classes, markup and template * find new govuk-templates * adapt run script and webpack config * use display:none to avoid FOUCs * Fix heading hierarchy * remove <dialog> as not supported by the version of html5shiv in govuk_template * remove align attribute (wtf)

--- a/mtp_cashbook/assets-src/stylesheets/app.scss
+++ b/mtp_cashbook/assets-src/stylesheets/app.scss
@@ -4,10 +4,14 @@ $images-dir: '/static/images/';
 
 @import 'mtp';
 
-// app-specific
-.help-box { width: 65% }
-
 // Page specific styles
 @import 'views/batch';
 @import 'views/history';
 @import 'views/locked';
+
+// app-specific
+.help-box { width: 65% }
+
+.form-group {
+  margin-bottom: 10px;
+}
